// Vitest Snapshot v1

exports[`statements > should optimize do-while statements 1`] = `
"import { useRef as _useRef } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$branch as _$$branch } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let i = 0,
    _cache = _$$branch(_$$cache(_useRef, 1), 0, 0),
    _id = 0;
  do {
    let _loop = _$$branch(_cache, _id++, 3),
      _equals = _$$equals(_loop, 0, i),
      _value = _equals ? _loop[0] : _loop[0] = i;
    _equals ? _loop[1] : _loop[1] = console.log(_value);
    let _hoisted = i += 1;
    _$$equals(_loop, 2, _hoisted) ? _loop[2] : _loop[2] = _hoisted;
  } while (i < props.x);
}"
`;

exports[`statements > should optimize for statements 1`] = `
"import { useRef as _useRef } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$branch as _$$branch } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$branch(_$$cache(_useRef, 1), 0, 0),
    _id = 0;
  for (let i = 0; i < 10; i += 1) {
    let _loop = _$$branch(_cache, _id++, 2),
      _equals = _$$equals(_loop, 0, i),
      _value = _equals ? _loop[0] : _loop[0] = i;
    _equals ? _loop[1] : _loop[1] = console.log(_value);
  }
}"
`;

exports[`statements > should optimize for-in statements 1`] = `
"import { useRef as _useRef } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$branch as _$$branch } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useRef, 3),
    _equals = _$$equals(_cache, 0, props),
    _value = _equals ? _cache[0] : _cache[0] = props,
    _value2 = _equals ? _cache[1] : _cache[1] = _value.arr,
    _cache2 = _$$branch(_cache, 2, 0),
    _id = 0;
  for (const x in _value2) {
    let _loop = _$$branch(_cache2, _id++, 2),
      _equals2 = _$$equals(_loop, 0, x),
      _value3 = _equals2 ? _loop[0] : _loop[0] = x;
    _equals2 ? _loop[1] : _loop[1] = console.log(_value3);
  }
}"
`;

exports[`statements > should optimize for-of statements 1`] = `
"import { useRef as _useRef } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$branch as _$$branch } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useRef, 3),
    _equals = _$$equals(_cache, 0, props),
    _value = _equals ? _cache[0] : _cache[0] = props,
    _value2 = _equals ? _cache[1] : _cache[1] = _value.arr,
    _cache2 = _$$branch(_cache, 2, 0),
    _id = 0;
  for (const x of _value2) {
    let _loop = _$$branch(_cache2, _id++, 2),
      _equals2 = _$$equals(_loop, 0, x),
      _value3 = _equals2 ? _loop[0] : _loop[0] = x;
    _equals2 ? _loop[1] : _loop[1] = console.log(_value3);
  }
}"
`;

exports[`statements > should optimize if statements 1`] = `
"import { useRef as _useRef } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$branch as _$$branch } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useRef, 6),
    _equals = _$$equals(_cache, 0, props),
    _value = _equals ? _cache[0] : _cache[0] = props,
    _value2 = _equals ? _cache[1] : _cache[1] = _value.type,
    _equals2 = _$$equals(_cache, 2, _value2),
    _value3 = _equals2 ? _cache[2] : _cache[2] = _value2;
  if (_equals2 ? _cache[3] : _cache[3] = _value3 === 'a') {
    let _cache2 = _$$branch(_cache, 4, 3),
      _value5 = _equals ? _cache2[0] : _cache2[0] = _value.value,
      _equals3 = _$$equals(_cache2, 1, _value5),
      _value6 = _equals3 ? _cache2[1] : _cache2[1] = _value5;
    return _equals3 ? _cache2[2] : _cache2[2] = examples.a(_value6);
  } else {
    let _cache3 = _$$branch(_cache, 5, 3),
      _value8 = _equals ? _cache3[0] : _cache3[0] = _value.value,
      _equals4 = _$$equals(_cache3, 1, _value8),
      _value9 = _equals4 ? _cache3[1] : _cache3[1] = _value8;
    return _equals4 ? _cache3[2] : _cache3[2] = examples.b(_value9);
  }
}"
`;

exports[`statements > should optimize labeled statements 1`] = `
"import { useRef as _useRef } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$branch as _$$branch } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache3 = _$$cache(_useRef, 2);
  foo: {
    let _cache2 = _$$branch(_cache3, 0, 1);
    {
      let _cache = _$$branch(_cache2, 0, 2);
      0 in _cache ? _cache[0] : _cache[0] = console.log(\\"face\\");
      break foo;
      1 in _cache ? _cache[1] : _cache[1] = console.log(\\"this will not be executed\\");
    }
  }
  1 in _cache3 ? _cache3[1] : _cache3[1] = console.log(\\"swap\\");
}"
`;

exports[`statements > should optimize switch statements 1`] = `
"import { useRef as _useRef } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$branch as _$$branch } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useRef, 6),
    _equals = _$$equals(_cache, 0, props),
    _value = _equals ? _cache[0] : _cache[0] = props;
  switch (_equals ? _cache[1] : _cache[1] = _value.type) {
    case 'a':
      let _cache2 = _$$branch(_cache, 2, 3),
        _value3 = _equals ? _cache2[0] : _cache2[0] = _value.value,
        _equals2 = _$$equals(_cache2, 1, _value3),
        _value4 = _equals2 ? _cache2[1] : _cache2[1] = _value3;
      return _equals2 ? _cache2[2] : _cache2[2] = examples.a(_value4);
    case 'b':
      let _cache3 = _$$branch(_cache, 3, 3),
        _value6 = _equals ? _cache3[0] : _cache3[0] = _value.value,
        _equals3 = _$$equals(_cache3, 1, _value6),
        _value7 = _equals3 ? _cache3[1] : _cache3[1] = _value6;
      return _equals3 ? _cache3[2] : _cache3[2] = examples.b(_value7);
    case 'c':
      let _cache4 = _$$branch(_cache, 4, 3),
        _value9 = _equals ? _cache4[0] : _cache4[0] = _value.value,
        _equals4 = _$$equals(_cache4, 1, _value9),
        _value10 = _equals4 ? _cache4[1] : _cache4[1] = _value9;
      return _equals4 ? _cache4[2] : _cache4[2] = examples.c(_value10);
    default:
      let _cache5 = _$$branch(_cache, 5, 3),
        _value12 = _equals ? _cache5[0] : _cache5[0] = _value.value,
        _equals5 = _$$equals(_cache5, 1, _value12),
        _value13 = _equals5 ? _cache5[1] : _cache5[1] = _value12;
      return _equals5 ? _cache5[2] : _cache5[2] = examples.default(_value13);
  }
}"
`;

exports[`statements > should optimize throw statements 1`] = `
"import { useRef as _useRef } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useRef, 4),
    _equals = _$$equals(_cache, 0, props),
    _value = _equals ? _cache[0] : _cache[0] = props,
    _value2 = _equals ? _cache[1] : _cache[1] = _value.message,
    _equals2 = _$$equals(_cache, 2, _value2),
    _value3 = _equals2 ? _cache[2] : _cache[2] = _value2;
  throw _equals2 ? _cache[3] : _cache[3] = createError(_value3);
}"
`;

exports[`statements > should optimize try statements 1`] = `
"import { useRef as _useRef } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$branch as _$$branch } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache2 = _$$cache(_useRef, 3);
  try {
    let _cache = _$$branch(_cache2, 0, 2),
      _equals = _$$equals(_cache, 0, props),
      _value = _equals ? _cache[0] : _cache[0] = props;
    _equals ? _cache[1] : _cache[1] = _value.a();
  } catch (e) {
    let _cache3 = _$$branch(_cache2, 1, 3),
      _equals2 = _$$equals(_cache3, 0, props),
      _value3 = _equals2 ? _cache3[0] : _cache3[0] = props,
      _equals3 = _$$equals(_cache3, 1, e),
      _value4 = _equals3 ? _cache3[1] : _cache3[1] = e;
    _equals2 && _equals3 ? _cache3[2] : _cache3[2] = _value3.b(_value4);
  } finally {
    let _cache4 = _$$branch(_cache2, 2, 2),
      _equals5 = _$$equals(_cache4, 0, props),
      _value6 = _equals5 ? _cache4[0] : _cache4[0] = props;
    _equals5 ? _cache4[1] : _cache4[1] = _value6.c();
  }
}"
`;

exports[`statements > should optimize while statements 1`] = `
"import { useRef as _useRef } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$branch as _$$branch } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let i = 0,
    _cache = _$$branch(_$$cache(_useRef, 1), 0, 0),
    _id = 0;
  while (i < props.x) {
    let _loop = _$$branch(_cache, _id++, 3),
      _equals = _$$equals(_loop, 0, i),
      _value = _equals ? _loop[0] : _loop[0] = i;
    _equals ? _loop[1] : _loop[1] = console.log(_value);
    let _hoisted = i += 1;
    _$$equals(_loop, 2, _hoisted) ? _loop[2] : _loop[2] = _hoisted;
  }
}"
`;
